# uav_object_localisation

./: README.md
object_detection_blob/: CMakeLists.txt  blob.launch  blob_cnn.launch  blob_sim.launch  package.xml  plugin.xml  setup.py  thresholds.txt
object_detection_blob/include/: BlobDetection.h  LightCorrection.h  Tester.h
object_detection_blob/msg/: BlobObject.msg  BlobWall.msg
object_detection_blob/scripts/: rqt_calibration_gui
object_detection_blob/src/: BlobDetection.cpp  LightCorrection.cpp  Tester.cpp  object_detection_blob_node.cpp  object_detection_blob_test.cpp
object_detection_blob/src/rqt_calibration_gui/: blob_calibration_gui.py
object_detection_blob/src/rqt_calibration_gui/resource/: overview.ui
object_detection_blob/srv/: adjust_ranges.srv
object_detection_common/: CMakeLists.txt  package.xml
object_detection_common/include/: Coordinate.h  DetectionObjects.h  Tag.h
object_detection_common/src/: Coordinate.cpp  Tag.cpp
object_localization_estimator/: CMakeLists.txt  package.xml  rosbag_commands
object_localization_estimator/include/: Estimator.h
object_localization_estimator/launch/: localization_blob.launch  localization_blob_bluefox.launch  localization_blob_sim.launch  localization_cnn.launch  localization_cnn_sim.launch
object_localization_estimator/msg/: Localized_Object.msg
object_localization_estimator/src/: Estimator.cpp  object_localization_estimator_node.cpp
object_recognition_cnn/: CMakeLists.txt  Doxyfile  README  object_recognition_cnn.launch  object_recognition_cnn_sim.launch  package.xml
object_recognition_cnn/include/: CNN.h  Tester.h  convolutional_layer.h  deform.h  layer.h  loader.h  mnist_parser.h  network.h  util.h
object_recognition_cnn/msg/: Object.msg
object_recognition_cnn/src/: CNN.cpp  Tester.cpp  object_recognition_cnn.cpp  test.cpp
object_recognition_cnn/srv/: LoadWeights.srv  Localize.srv
